@@ -1,6 +1,7 @@
 class RoutingError < StandardError; end
 class InvalidRoute < RoutingError; end
 class InvalidRouteUrl < InvalidRoute; end
+class InvalidRouteTo < InvalidRoute; end
 class InvalidRouteController < InvalidRoute; end
 class InvalidRouteMethod < InvalidRoute; end
 
